--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,5 +22,10 @@ jobs:
       run:
         pip install pipenv && pipenv install
     - name: Run
+      env:
+        ACCESS_KEY: ${{ secrets.TWITTER_ACCESS_KEY }}
+        ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+        API_KEY: ${{ secrets.TWITTER_API_KEY }}
+        API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
       run:
         python main.py
