--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
         pip install pipenv && pipenv install
     - name: Run
       env:
-        ACCESS_KEY: ${{ secrets.TWITTER_ACCESS_KEY }}
+        ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
         ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         API_KEY: ${{ secrets.TWITTER_API_KEY }}
         API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
